--- a/App/estilos.css
+++ b/App/estilos.css
@@ -1,15 +1,6 @@
 header{
-	background: #2c3e50;
-	color:#fff;
-}
-
-.main{
-	background: #f2f2f2;
-}
-
-.color1{
-	background: #34495e;
-	color:#fff;
+	background: #ffffff;
+	color:#000000;
 }
 
 footer{
